log
Tue 21 Mar 2023 03:43:58 PM UTC: 
 tests:  0|6
total_score: 0/70
c918822
Tue 21 Mar 2023 04:01:30 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
e74af00
Tue 21 Mar 2023 04:02:51 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:12: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |      List *lista = (List*) malloc(sizeof(List));
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
29ae457
Tue 21 Mar 2023 04:04:15 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
70e11c9
